# ItemsApp

./: .dockerignore  .env  .gitignore  Makefile  README.md  db.sqlite3  docker-compose.base.yml  docker-compose.dbs.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-stack.yml  items.json  locust_testing.py  locust_testing_backend.py  locust_testing_frontend.py  most_recent_ammo.json  most_recent_items.json  most_recent_tasks.json  nginx.conf  nginx.dev.conf  quests.json  scrap_item_icons.py
api/: models.py  serializers.py  urls.py  views.py
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  Dockerfile.dev  db.sqlite3  entry-point.sh  items.json  requirements.txt  tasks.json  wait-for-postgres.sh
backend-old/: .coveragerc  Dockerfile  (+1 more)
backend/.cargo/: config.toml
backend/.sqlx/: query-0aae835c97755ab052fcf13b5a75859e986260dcc75badeef2a11993a94f1a51.json  query-0be35533cad102b010a2ff76a1e675d63d3e042da1901bf56ed794e5169bf16c.json  query-0fb86abb2182386a1c833ac74a9949b33e36e8361f64d05cb606d0fe71329536.json  query-116cecb65ca256a077d7637654e07f7fba948f9e74dcf22f98025d9ad5202265.json  query-13e1df5abb90b4db2ff7c80c43df08234b32853c82241171f45257eec1cc3b9a.json  query-180e8f2277f693e7c6c403275bcef4303a940b3b84b0f976b94d12dcec26ff16.json  query-1ea7b19056d4d6bac8a0666636b8f0736a457ea969d922ea18bd1545de333be1.json  query-1f94a2e7e1ae83a6e94de5e5af47f998fc459b02315d26369b8e42cc4a7730c7.json  query-205d423eea8b5e1f68c24bd1b9573dd0550c9c42cd74864f3beb01f15ba6b7f2.json  query-249056e8acb7f7fda2f65662e78c8098c6ee4e1406c9405c805f678ac455c817.json  query-27f55658cb84470166752d1f5f2b99b15befede8dcc92654a5d3240076107377.json  query-291337a9e2ca944fd1c5268edc52318e69fe3e45e33602a5eeb27ed84a03ba7a.json  query-2baedbc50ace4e5ec5242eafc5e0bb86192d0f6e3b5e8f7ca4835c32f3a3299f.json  query-2bce89e02e49bafdf3882f7f123199614ae4db529270c33b84cd2e60e89653d5.json  query-2c3213f8dad8b6282e5b1e0a9a447fd02193ed9ad585e88dfde08f0e9ef4ba48.json  query-2d82b99f1a135b843f72d7cc26918a6defd090f3d9d95ef0a54c621ae16b95a9.json  query-2d9e05856d487b752ba2a8fa2648be8344c285dd72d827c24b990a4256f13d4d.json  query-2ec0ac36753ebe7900f1cc43ca2cdc57a17b68fc7da8c8802b28a803e89b5477.json  query-3138a51d9bee611bcf3420b3c371348ff5ee2253d74d6fb779c5fde0dc05dfd1.json  query-3164bd3b457c733d9f127b3e995db47adaa09992ca96561bf534998831671ada.json  query-31ed45018a34e122b08a5a3739c42bf2feccc7ab74a6b860461bd5110d5eb1da.json  query-345dfab27c8a503d5034836a84abc28953bb2402f82dc714c93aeff02c43fa1b.json  query-3b102b7be4ec9db20f0dafd9a86c365cd2fb15a07eee5436eb9341061d566a36.json  query-4085648927e5b12cc1b356be489af313a74ece6cd21ec7b7179c05dff946adf1.json  query-41dd9dd6347a610818cc13d997c249a776bb748594bd3b9a83dde7d45bd81889.json  query-43d90fe52fda37806bf2e4af57dfdb8533e29115ae2afc8f2f8e6a0a20d3ad21.json  query-43dcac3c6d0c2a9fcaa1d29fa696862e33886cbba5a519f5cd55aeeae20391f3.json  query-465029a05e62167f9bb380afed54036acd962c527cd78811f0ad823cdf24d173.json  query-4b0ea28f40f4221f6ab3a0905f660b9d1d0a61a7b660fea1cf7ae210b6524fb2.json  query-4d4084c0d81889ea9bdda89dde96df9c45b7d40c3bdeebdea62a62d3ee258725.json  query-5121375af39e93057bd3227c19858b4916e1f9ad70dca776a1a8a05eb03e724c.json  query-520ca5b504ca2822f9abe9154f6d957a5b34c5864ceb0587baacc26126002cdd.json  query-54794d2aae65166b7157e3ce5af85516470523c0010f5aab75ef5913d97c6917.json  query-588d0e167149399eee4cbc68f5844ac0d9b408cf2be7e13ac178b23b6535f5bc.json  query-5e2608dfba90287114326d4e9266b91ac61057b1e73181f46f64d68f941475da.json  query-5e2be16f012687594c1b52d26d5b4100d1e0dccf0bf1e84ecbdd16e8ca23e0e5.json  query-5f85a3efd9c522a0c90e485225e60201a832f7a578cd692011b227746bd52887.json  query-6212a891ee50240b85173c640eb07288c6a067201bdef7399e51a4be7645dfb9.json  query-63fb7d30333660d26a9efeb830c6bc11fb5282ce538e7f3a3dca866802449037.json  query-687ba36c4603fbcb202ded4e1ed0e2a362f0ac3c0d93fe4925bd7ad1dccea6da.json  (+52 more)
backend/api/: api_scheduler.py  apps.py  auth.py  fastapi.py  fastapi_views.py  models.py  serializers.py  settings.py  tests.py  views.py
backend/api/management/commands/: upsert.py  upsert_api.py  upsert_file.py  upsert_items_api.py  upsert_items_file.py  upsert_tasks_api.py  upsert_tasks_file.py
backend/api/migrations/: 0001_initial.py  0002_rename_obj_type_objective_objtype_and_more.py  0002_user.py
backend/api/routers/: items.py  pastApi.py  tasks.py  token.py
backend/backendDjango/: settings.py  urls.py
backend/backend_django/: settings.py  urls.py
backend/migrations/: 0001_init.sql  0002_ammo.sql  0002_auth.sql  0002_indexes.sql  0003_flea_market_parm.sql  0004_remove_map_wiki.sql  0004_search_composite_indexes.sql  0005_better_item_history_index.sql  0006_keyset_pagination_keys_items.sql
backend/src/: ammo_routes.rs  api_routers.rs  caching.rs  database_types.rs  deserialize_json_types.rs  endpoint_tests.rs  init_app_state.rs  item_routes.rs  main.rs  middleware.rs  query_types.rs  task_routes.rs  upsert.rs
(+141 files in other folders)
