[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
used_underscore_binding = "allow"
struct_field_names = "allow"

[dependencies]
axum = {version = "0.8.6", features=["macros", "json"]}
axum-extra = { version = "0.10.3", features=["query"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "macros"] }

chrono = { version = "0.4.42", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.32.7", features = ["tokio-rustls-comp", "cluster-async", "r2d2"] }
bb8-redis = "0.24.0"
redis-macros = "0.5.6"

dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
tower-http = {version = "0.6.6", features = ["trace"]}
moka = { version = "0.12.11", features = ["future"] }
futures = "0.3.31"
rayon = "1.11.0"
tokio-rayon = "2.1.0"
