[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
used_underscore_binding = "allow"
struct_field_names = "allow"

[dependencies]
mimalloc = { version = "0.1.48", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
] }
tracing-appender = { version = "0.2.4", default-features = false }
axum = { version = "0.8.8", features = ["macros", "json"] }
axum-extra = { version = "0.12.5", features = ["query"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }

chrono = { version = "0.4.43", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
redis = { version = "0.32.7", features = [
    "tokio-rustls-comp",
    "cluster-async",
    "r2d2",
] }
bb8-redis = "0.24.0"
redis-macros = "0.5.6"

dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
moka = { version = "0.12.12", features = ["future"] }
futures = "0.3.31"
bincode = { version = "2.0.1", features = ["serde"] }
anyhow = "1.0.100"
ahash = "0.8.12"
dashmap = "6.1.0"
