[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 0

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
used_underscore_binding = "allow"
struct_field_names = "allow"

[dependencies]
mimalloc = { version = "0.1.48", default-features = false }
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "ansi",
] }
tracing-appender = { version = "0.2.4", default-features = false }
axum = { version = "0.8.8", features = ["macros", "json"] }
axum-extra = { version = "0.12.5", features = ["query"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

chrono = { version = "0.4.43", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }

redis = { version = "1.0.2", features = [
    "tokio-rustls-comp",
    "cluster-async",
    "r2d2",
] }
bb8-redis = "0.26.0"
redis-macros = "1.0.1"

dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
futures = "0.3.31"
ahash = { version = "0.8.12", features = [
    "serde",
    "compile-time-rng",
    "std",
], default-features = false }
dashmap = "6.1.0"
postcard = { version = "1.1.3", features = ["use-std"] }
anyhow = { version = "1.0.100", default-features = false }
